[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cmhmr-blog"
version = "0.1.0"
description = "Custom static blog generator with 3D animated background"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.5",
    "pygments>=2.17",
    "pyyaml>=6.0",
]

[project.scripts]
cmhmr-blog = "generate:main"

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.css", "*.js"]
